feat: building exe file, fix AudioPlayer, refactor package